# bit-casino-player-ms

./: .gitignore  Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: build.yaml
.sqlx/: query-1f44f41759e9c425328c8a0f61a9b1d93f8c4c04189c6d3541d5781797ce5f46.json  query-3e2e94b9090306c21e0983c0bb661ec6fda772d1862f87f59e97e18039745476.json  query-6e1d31fd01ceebb5fa368bb155d1b88673b59cdc443181efe3e0d9b30b8ecd30.json  query-edadb937940fa71a0f1b6b3949402d48bddab869c292827a6042e1f5ad0fd07d.json
migrations/: 20250725191759_players.down.sql  20250725191759_players.up.sql
public/: docs.html
src/: auth.rs  db.rs  handlers.rs  hashing.rs  jwt.rs  main.rs  router.rs  routes.rs  test_utils.rs  validators.rs
src/db/: models.rs  queries.rs
src/handlers/: creation.rs  deletion.rs  documentation.rs  helper.rs  responses.rs
src/handlers/authentication/: login.rs  token.rs
src/models/: user.rs
src/requests/: currency.rs
src/routes/: deletion.rs  login.rs  registration.rs  responses.rs  user.rs
