[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.7"
dotenv = "0.15"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
