[package]
name = "bit-casino-player-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.7"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9.3"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "chrono"] }
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
